--- a/README
+++ b/README
@@ -1,13 +1,15 @@
 ***How to use it***
 
-The cam_sim can be used to simulate visuo-motor trajectories in the image dataset can be found at the Zenodo repository: https://zenodo.org/record/3552827#.Xk2v4xNKiRs
+Cam_sim can be used to simulate visuo-motor trajectories on a dataset that can be downloaded from the following Zenodo repository: https://zenodo.org/record/3552827#.Xk2v4xNKiRs
 
-After cloning this repository, create a folder within it called raw_images where you extract the jpeg files contained in the zenodo zip archive.
-Run:
+After cloning this github repository, create a folder within it called raw_images and extract the jpeg files contained in the zenodo zip archive.
+Then run:
 python cam_sim.py
 
 to generate a pkl archive.
-Use cam_sim to generate simulated trajectories over the visuomotor dataset. 
+Finally, you can use cam_sim to generate simulated trajectories over the visuomotor dataset. 
+
+See example.py for an simple test on how to generate trajectories
 
 Dataset reference:
 Guido Schillaci, & Antonio Pico Villalpando. (2020). Visuo-motor dataset recorded from a micro-farming robot (Version 0.1) [Data set]. Zenodo. http://doi.org/10.5281/zenodo.3552827
